k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    app.kubernetes.io/part-of: netflix-clone
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    app.kubernetes.io/part-of: netflix-clone
