k8s/02-backend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
  labels:
    app.kubernetes.io/name: netflix-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        app.kubernetes.io/name: netflix-backend
    spec:
      containers:
        - name: backend
          image: 646687998257.dkr.ecr.us-east-1.amazonaws.com/netflix-clone-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
  labels:
    app.kubernetes.io/name: netflix-backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
